--- a/src/templates/navigations/ScarabBottom.vm
+++ b/src/templates/navigations/ScarabBottom.vm
@@ -2,7 +2,7 @@
 <!-- copyright -->
   <table border="0" cellpadding="0" cellspacing="0" width="100%">
     <tr>
-      <td id="globalnav">
+      <td class="globalnav">
 	&copy; 2001&nbsp;<a href="http://www.collab.net/">CollabNet</a> | 
 	<a href="http://scarab.tigris.org/">Scarab</a> |
 	<a href="$link.setPage("Links.vm")">Links</a>
