--- a/src/templates/GlobalMacros.vm
+++ b/src/templates/GlobalMacros.vm
@@ -19,6 +19,10 @@
         </select>
 #end
 
+#macro ( attrValueText $attrValue $size )
+    #set ( $attrInput = $intake.AttributeValue.mapTo($attrValue) )
+    <input type="text" name="$attrInput.Value.Key" value="$!attrInput.Value"#if($size.length()) size="$size"#end>
+#end
 
 #macro ( attrValueHierarchySelect $attrValue $optionFieldName $size )
     #set ( $attrInput = $intake.AttributeValue.mapTo($attrValue) ) 
@@ -92,10 +96,8 @@
     #if ( $field.Validator.MaxLength && $field.Validator.MaxLength > 0 )
         #set ( $maxLength = $field.Validator.MaxLength )
     #end
-
     <input type="text" name="$field.Key" value="$!field.Value"#if($maxLength) maxlength="$maxLength"#end#if($size.length()) size="$size"#end>
 #end
-
 
 #macro (userSelectBox $attrValue $size)
     #set ( $attrInput = $intake.AttributeValue.mapTo($attrValue) ) 
