added order by clauses so the attributes are ordered correctly in the sql also running the foreach loop over the ordered keys instead of the values which may be returned in any order.
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/screens/entry/Wizard1.vm
+++ b/src/templates/screens/entry/Wizard1.vm
@@ -38,8 +38,8 @@ $page.setTitle("Enter New Issue")
         </tr> -->
 *#
 
-#foreach ( $attVal in $attrValues )
-
+#foreach ( $attKey in $attrValues.sequence() )
+  #set ( $attVal = $attrValues.get($attKey) )
   #if ($attVal.isDedupeAttribute())
     <tr>
         <td width="120" class="a">
