--- a/src/templates/GlobalMacros.vm
+++ b/src/templates/GlobalMacros.vm
@@ -109,16 +109,14 @@
             #if ($size.length() == 0)
             <option value="">Choose...</option>
             #end
-$security
-$attr.Permission
-$module
+
             #foreach ($user in $security.getUsers($attr.Permission, $module))
               #set ( $selected = "" )
               #if ($attrInput.UserId.Value && $user.PrimaryKey == $attrInput.UserId.Value)
                 #set ( $selected = " selected" )
               #end
               <option$selected value="$user.PrimaryKey">
-                  $user.UserName $velocityCount</option>
+                  $user.UserName</option>
             #end
         </select>
 #end
