--- a/src/templates/screens/entry/Wizard2.vm
+++ b/src/templates/screens/entry/Wizard2.vm
@@ -1,16 +1,10 @@
-#*
-#set ( $action = $link.setPage("entry/Wizard2.vm").setAction("ReportIssue").addPathInfo("nextTemplate", "entry/Wizard3.vm") )
+#set ( $action = $link.setPage("entry,Wizard2.vm").setAction("ReportIssue").addPathInfo("nextTemplate", "entry,Wizard3.vm") )
 #set ($user = $scarabR.User)
 #set ($module = $user.CurrentModule)
-##set ($issue = $user.ReportingIssue)
+#set ($currentIssue = $user.ReportingIssue)
 
 
-<FORM METHOD="get" NAME="Report2Form" action="$action">
-*#
-
-
-
-
+<form method="GET" NAME="Report2Form" action="$action">
 
 
       <h1>Identified as Duplicate (2.1.1)</h1>
@@ -29,6 +23,27 @@
        <div class="datatable">
         <table width="100%" border="1" cellspacing="2" cellpadding="3">
          <tr class="a">
+
+    #set( $attrValues = $currentIssue.ModuleAttributeValuesMap )
+    #set( $keys = $attrValues.sequence() )
+    #foreach ( $attKey in $keys )
+        #set ( $attVal = $attrValues.get($attKey) )
+        #if ($attVal.isDedupeAttribute())
+            <td>
+            <strong>$attVal.Attribute.Name: </strong>
+            #if ($attVal.Attribute.AttributeType.Name == "email" && $attVal.Value && $attVal.Value.toString().length() != 0 )
+
+                <a href="mailto:$attVal.Value">$attVal.Value</a>
+
+            #else
+                $!attVal.Value
+            #end
+            </td>
+
+        #end
+    #end
+
+#*
           <td>Issue summary x</td>
 
           <td>*platform x</td>
@@ -42,6 +57,9 @@
           <td>xx/xx/2001</td>
 
           <td>unassigned</td>
+*#
+
+
          </tr>
         </table>
        </div>
@@ -60,10 +78,32 @@
         <table width="100%" border="1" cellspacing="2" cellpadding="3">
 
          <tr>
-          <th><a href="#"><img src="./images/icon_uparrow.gif" width="13" height="8" alt="sort" border="0" /></a><a href="#"><img src="./images/icon_downarrow.gif" width="13" height="8" alt="sort" border="0" /></a></th>
+          <th><a href="#"><img src="/scarab/images/icon_uparrow.gif" 
+                width="13" height="8" alt="sort" border="0" /></a><a href="#"><img 
+                src="/scarab/images/icon_downarrow.gif" width="13" height="8" 
+                alt="sort" border="0" /></a></th>
 
           <th><a href="#">issue ID #:</a></th>
 
+#foreach ( $attVal in $currentIssue.OrderedModuleAttributeValues )
+    #if ($attVal.isDedupeAttribute())
+
+
+    #end
+#end
+
+
+    #set( $attrValues = $currentIssue.ModuleAttributeValuesMap )
+    #foreach ( $attKey in $keys )
+        #set ( $attVal = $attrValues.get($attKey) )
+        #if ($attVal.isDedupeAttribute())
+
+            <th><a href="#">$attVal.Attribute.Name: </a></th>
+
+        #end
+    #end
+
+#*
           <th><a href="#">issue summary:</a></th>
 
           <th><a href="#">platform:</a></th>
@@ -74,9 +114,12 @@
 
           <th><a href="#">severity:</a></th>
 
+*#
+
           <th><a href="#">creation date:</a></th>
 
           <th><a href="#">date closed:</a></th>
+
          </tr>
 
 #foreach ($issue in $issueList)
@@ -84,24 +127,38 @@
     #set ( $issueLink = $link.addPathInfo($data.Parameters).setPathInfo("currentIssueId", $issue.UniqueId).setPage($link.CurrentView).addPathInfo("action", "ReportIssue").toString() )
 
          <tr class="a">
-          <td><input type="checkbox" /></td>
+#set ($issueGroup = $intake.Issue.Default)
+#if ($velocityCount == 1)
+    #set ($checked = ' checked="checked"' )
+#else
+    #set ($checked = '')
+#end
+          <td><input type="radio" name="$issueGroup.Id.Key" 
+                  value="issue.IssueId"$checked /></td>
 
           <td><strong>$issue.UniqueId</strong></td>
          
-          <td>$issue.ModuleAttributeValuesMap.get("SUMMARY").Value</td>
-
-    #foreach ( $attKey in $attrValues.sequence() )
+    #set( $attrValues = $issue.ModuleAttributeValuesMap )
+    #foreach ( $attKey in $keys )
         #set ( $attVal = $attrValues.get($attKey) )
         #if ($attVal.isDedupeAttribute())
+            <td>
+            #if ($attVal.Attribute.AttributeType.Name == "email" && $attVal.Value && $attVal.Value.toString().length() != 0 )
 
-          <td>$!attVal.Value</td>
+                <a href="mailto:$attVal.Value">$attVal.Value</a>
+
+            #else
+                $!attVal.Value
+            #end
+            </td>
 
         #end
     #end
 
           <td>$issue.CreatedDate</td>
 
-          <td>xx/xx/2001</td>
+          <td>$!issue.ClosedDate</td>
+
          </tr>
 
 #end
@@ -110,7 +167,8 @@
        </div>
       </div>
 
-      <p><input type="submit" value="add vote to selected" class="button" /></p>
+      <p><input type="submit"  name="eventSubmit_doAddvote" 
+             value="add vote to selected" class="button" /></p>
 
       <div class="listtable">
        <table width="100%" cellpadding="3" cellspacing="2" border="1">
@@ -120,7 +178,8 @@
          <td class="b">
           <textarea rows="4" cols="40" class="text"></textarea>
 
-          <p><input type="submit" value="submit note" class="button" /></p>
+          <p><input type="submit" name="eventSubmit_doAddnote" 
+                 value="submit note" class="button" /></p>
          </td>
         </tr>
        </table>
@@ -129,8 +188,11 @@
       <div class="grouper">
        <p>
         The issues above do not match my issue:<br />
-        <input type="submit" value="continue issue entry" class="button" />
-        &#160;<input type="submit" value="cancel" class="button" />
+        <input type="submit" name="eventSubmit_doGotowizard3"
+            value="continue issue entry" class="button" />
+        &#160;
+        <input type="submit" name="eventSubmit_doCancel"
+              value="cancel" class="button" />
        </p>
       </div>
 
